tests/ui/parser/public-instead-of-pub.stderr
error: expected one of `!` or `::`, found keyword `struct`
  --> $DIR/public-instead-of-pub.rs:4:8
   |
LL | public struct X;
   |        ^^^^^^ expected one of `!` or `::`
   |
help: write `pub` instead of `public` to make the item public
   |
LL - public struct X;
LL + pub struct X;
   |

error: aborting due to 1 previous error

